fixed background blur on hamburger menu to work on safari

--- a/index.css
+++ b/index.css
@@ -1345,6 +1345,7 @@ hr {
 
     background-color: rgba(var(--background-color-light), 0.9);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 
 }
 
